# online-course-management-system

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  example.env  setup.cfg
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt  setup.cfg
backend/api/: urls.py
backend/api/v1/: constants.py  consumers.py  docs.py  filters.py  notifications.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/core/: auth_middleware.py  exceptions.py  models.py  services.py  views.py
backend/core/management/commands/: banana.py  celery-hello.py
backend/courses/: admin.py  apps.py  documents.py  models.py  serializers.py  services.py  signals.py
backend/courses/migrations/: 0001_initial.py  0002_alter_comment_options_alter_course_options_and_more.py  0003_auto_20251010_0737.py  0004_historicalcomment_historicalcourse_historicalgrade_and_more.py
backend/mock/: factories.py
backend/mock/management/commands/: seed_db.py
backend/project/: asgi.py  celery.py  constants.py  notifications.py  settings.py  urls.py  views.py
backend/tests/: conftest.py  test_comments.py  test_courses.py  test_grades.py  test_homework.py  test_lectures.py  test_submissions.py  test_users.py
backend/users/: admin.py  models.py  serializers.py
backend/users/migrations/: 0001_initial.py  0002_historicalcustomuser.py
docs/: Online course management system API.yaml
infra/: cors.json  nginx.conf
