[project]
name = "online-course-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django==5.2.4",
    "django-celery-results>=2.6.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "djoser==2.3.3",
    "drf-spectacular==0.28.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "isort",
    "flake8-pyproject>=1.2.3",
    "factory-boy>=3.3.3",
    "faker>=37.5.3",
    "django-querycount>=0.8.3",
    "django-stubs>=5.2.7",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.isort]
line_length = 119
known_first_party = ["backend"]

[tool.flake8]
ignore = [ 
    'I001',
    'I003',
    'I004',
    'I005',
    'W503',
]
exclude = [
    '*/migrations/',
    'venv/',
    '.venv/',
    '*.venv/',
    '*/venv/',
    'env/',
    '*/env/',
    'backend/media/',
]
per-file-ignores = [
    '*/settings.py:E501'
]
max-line-length = 119
known_first_party = ["backend"] 
